--- a/css/app.css
+++ b/css/app.css
@@ -27,8 +27,13 @@ html {
 
 body {
     overflow: overlay;
-    font-family: 'sunflower';
+    font-family: 'Josefin Sans', sans-serif;
     padding: 0 !important;
+}
+
+.font-estetik {
+    font-family: 'Sacramento', cursive !important;
+    color: #ffffff !important;
 }
 
 .cropper {
