--- a/css/custom.css
+++ b/css/custom.css
@@ -20,25 +20,11 @@
     }
 
     #home {
-        background-image: url('../assets/images/home.jpg');
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 658px;
+        --bs-gutter-x: 0;
     }
 
     #mempelai {
-        background-image: url('../assets/images/mempelai.jpg');
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 658px;
+        --bs-gutter-x: 0;
     }
 }
 
