--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,7 @@
 
 body {
     font-family: sunflower;
+    background-color: #cad4cd;
 }
 
 @media only screen and (max-width: 768px) {
@@ -20,19 +21,19 @@ body {
         background-repeat: no-repeat;
     }
 
-    #home {
-        background-image: url('../assets/images/home.jpg');
+    .img-bg {
         background-size: auto 100%;
         background-position: center;
         background-repeat: no-repeat;
         height: 100vh;
     }
 
+    #home {
+        background-image: url('../assets/images/home.jpg');
+    }
+
     #mempelai {
         background-image: url('../assets/images/mempelai.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 100vh;
     }
 }
 
