--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,15 @@ body {
     background-color: #cad4cd;
 }
 
+.text-home {
+    font-size: 2.3rem; 
+    color: #5f3d22; 
+    line-height:1.2em; 
+    font-family: SweetRomance;
+    letter-spacing: .1em;
+    font-weight: bold;
+}
+
 @media only screen and (max-width: 768px) {
     .modal-cover {
         background-image: url('../assets/images/cover.webp');
